plugins {
    id "java"
}

java {
    sourceCompatibility = JavaVersion.VERSION_15
}

repositories {
    jcenter()
}

ext["postgreSqlVersion"] = "42.2.18"
ext["junitVersion"] = "5.7.0"
ext["mockitoVersion"] = "3.6.0"
ext["jacksonVersion"] = "2.12.0"
ext["log4j2Version"] = "2.14.0"

dependencies {
    implementation ("org.apache.logging.log4j:log4j-api:$log4j2Version")
    implementation ("org.postgresql:postgresql:$postgreSqlVersion")
    implementation ("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")

    runtimeOnly ("org.apache.logging.log4j:log4j-core:$log4j2Version")
    runtimeOnly ("org.apache.logging.log4j:log4j-slf4j-impl:$log4j2Version")

    testImplementation ("org.junit.jupiter:junit-jupiter:$junitVersion")
    testImplementation ("org.mockito:mockito-core:$mockitoVersion")
    testImplementation ("org.mockito:mockito-junit-jupiter:$mockitoVersion")
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
    options.fork = true
    options.deprecation = true
    options.compilerArgs += ["-Xlint:unchecked", "-Xlint:deprecation", "--enable-preview", "-Xlint:preview"]
}

tasks.withType(Test) {
    jvmArgs += ["--enable-preview"]
}

